--- a/DISNEY-HOTSTAR/index.html
+++ b/DISNEY-HOTSTAR/index.html
@@ -91,16 +91,130 @@
                         </div>
 
                         <div class="movies">
-                            <div class="swiper-left">
+                            <div class="swiper-left" id="swipe-left">
                                 <i class="fa-solid fa-angle-left"></i>
                             </div>
-                            <div class="swiper-right">
+                            <div class="swiper-right" id="swipe-right">
                                 <i class="fa-solid fa-angle-right"></i>
                             </div>
 
-                            <div class="slider">
+                            <div class="slider" id="slider">
+                                <div class="movie" id="movie">
+                                    <img class="movie-img" src="./images/mov-11.webp" alt="movie" />
+                                </div>
                                 <div class="movie">
-                                    <img class="movie-img" src="./images/mov-1.webp" alt="movie" />
+                                    <img class="movie-img" src="./images/mov-12.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-13.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-14.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-15.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-16.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-17.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-2.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-3.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-4.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-5.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-6.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-7.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-8.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-9.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-10.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-8.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-9.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="movie-img" src="./images/mov-10.webp" alt="movie" />
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <!-- Top 10-->
+                    <section class="movies-section movies-top">
+                        <div class="movies-section-header">
+                            <p class="section-title">Top 10 in India Today</p>
+                            <p class="va">View All<i class="fa-solid fa-angle-right"></i></p>
+                        </div>
+
+                        <div class="movies">
+                            <div class="swiper-left" id="swipe-left">
+                                <i class="fa-solid fa-angle-left"></i>
+                            </div>
+                            <div class="swiper-right" id="swipe-right">
+                                <i class="fa-solid fa-angle-right"></i>
+                            </div>
+
+                            <div class="slider" id="slider">
+                                <div class="movie" id="movie">
+                                    <img class="top" src="./images/top-1.png" alt="top" />
+                                    <img class="movie-img" src="./images/mov-11.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="top" src="./images/top-2.png" alt="top" />
+                                    <img class="movie-img" src="./images/mov-12.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="top" src="./images/top-3.png" alt="top" />
+                                    <img class="movie-img" src="./images/mov-13.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="top" src="./images/top-4.png" alt="top" />
+                                    <img class="movie-img" src="./images/mov-14.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="top" src="./images/top-5.png" alt="top" />
+                                    <img class="movie-img" src="./images/mov-15.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="top" src="./images/top-6.png" alt="top" />
+                                    <img class="movie-img" src="./images/mov-16.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="top" src="./images/top-7.png" alt="top" />
+                                    <img class="movie-img" src="./images/mov-17.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="top" src="./images/top-8.png" alt="top" />
+                                    <img class="movie-img" src="./images/mov-2.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="top" src="./images/top-9.png" alt="top" />
+                                    <img class="movie-img" src="./images/mov-3.webp" alt="movie" />
+                                </div>
+                                <div class="movie">
+                                    <img class="top" src="./images/top-10.png" alt="top" />
+                                    <img class="movie-img" src="./images/mov-4.webp" alt="movie" />
                                 </div>
                             </div>
                         </div>
