--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -49,36 +49,98 @@
                     <p class="sub-heading">I am</p>
                     <h1 class="name">Shubham Singh</h1>
                     <p class="role">Web Devloper | Chess Player</p>
-                    <p class="intro-text">A passionate devloper for creating websites and apps and i like playing chess in my free time.</p>
+                    <p class="intro-text">
+                        A passionate devloper for creating websites and apps and i like playing chess in my free time.
+                    </p>
 
-                     <button class="btn ttm-btn">
-                         Contact Me
-                     </button>
-                     
+                    <button class="btn ttm-btn">Contact <menu></menu></button>
                 </div>
 
                 <div class="profile-pic">
-
                     <div class="pic">
-                        <img src="./images/photo.jpg" alt="profile-pic">
+                        <img src="./images/photo.jpg" alt="profile-pic" />
                     </div>
 
-                     <div class="bg"></div>
-
+                    <div class="bg"></div>
                 </div>
-                      
             </div>
-
         </section>
-
 
         <section class="navigation">
             <nav class="nav">
+
                 <div class="nav-item">
-                    <i class="fa-solid fa-user"></i>
-                    <p>About Me</p>
+                   <div class="nav-link">
+                        <i class="fa-solid fa-user"></i>
+                        <p class="nav-text">About Me</p>
+                   </div>
                 </div>
+
+                <div class="nav-item">
+                   <div class="nav-link">
+                        <i class="fa-solid fa-gear"></i>
+                        <p class="nav-text">Services</p>
+                   </div>
+                </div>
+
+                <div class="nav-item">
+                   <div class="nav-link">
+                       <i class="fa-solid fa-briefcase"></i>
+                        <p class="nav-text">Work</p>
+                   </div>
+                </div>
+
+                <div class="nav-item">
+                   <div class="nav-link">
+                      <i class="fa-solid fa-address-card"></i>
+                        <p class="nav-text">Contact</p>
+                   </div>
+                </div>
+
             </nav>
+        </section>
+
+
+        <!-- content area -->
+        <section class="content">
+            <div class="display-area">
+
+                <div class="about-me">
+                    <div class="about">
+                        <h1 class="about-title">About</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo omnis voluptate, atque dolorum neque culpa cumque tempora eveniet et aliquid dignissimos. Officiis soluta nobis perspiciatis aspernatur? Eveniet ipsum voluptatem consequuntur!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus optio impedit minima maiores dolores, at fugiat ullam accusantium velit sapiente! Iure deserunt magni commodi nisi similique illum officia quas esse.
+                        </p>
+                    </div>
+
+                    <div class="about">
+                        <h1 class="about-title">Work Experience</h1>
+                        <p>
+                            Currently working as a freelancer
+                        </p>
+                        <p>
+                            3 years Experience in web devlopment
+                        </p>
+                        <p>
+                            2 years Experience in game devlopment
+                        </p>
+                    </div>
+
+                    <div class="about">
+                        <h1 class="about-title">Achievments</h1>
+                        <p>
+                            Currently working as a freelancer
+                        </p>
+                        <p>
+                            3 years Experience in web devlopment
+                        </p>
+                        <p>
+                            2 years Experience in game devlopment
+                        </p>
+                    </div>
+                </div>
+            </div>            
         </section>
 
     </body>
