added 3 more sections

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -68,80 +68,206 @@
 
         <section class="navigation">
             <nav class="nav">
-
-                <div class="nav-item">
-                   <div class="nav-link">
+                <div class="nav-item about-me-link active">
+                    <div class="nav-link">
                         <i class="fa-solid fa-user"></i>
                         <p class="nav-text">About Me</p>
-                   </div>
+                    </div>
                 </div>
 
-                <div class="nav-item">
-                   <div class="nav-link">
+                <div class="nav-item services-link">
+                    <div class="nav-link">
                         <i class="fa-solid fa-gear"></i>
                         <p class="nav-text">Services</p>
-                   </div>
+                    </div>
                 </div>
 
-                <div class="nav-item">
-                   <div class="nav-link">
-                       <i class="fa-solid fa-briefcase"></i>
+                <div class="nav-item work-link">
+                    <div class="nav-link">
+                        <i class="fa-solid fa-briefcase"></i>
                         <p class="nav-text">Work</p>
-                   </div>
+                    </div>
                 </div>
 
-                <div class="nav-item">
-                   <div class="nav-link">
-                      <i class="fa-solid fa-address-card"></i>
+                <div class="nav-item contact-link">
+                    <div class="nav-link">
+                        <i class="fa-solid fa-address-card"></i>
                         <p class="nav-text">Contact</p>
-                   </div>
+                    </div>
                 </div>
-
             </nav>
         </section>
-
 
         <!-- content area -->
         <section class="content">
             <div class="display-area">
+                <!-- about me -->
+                <div class="about-section">
+                    <div class="about-me">
+                        <div class="about">
+                            <h1 class="about-title">About</h1>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo omnis voluptate, atque
+                                dolorum neque culpa cumque tempora eveniet et aliquid dignissimos. Officiis soluta nobis
+                                perspiciatis aspernatur? Eveniet ipsum voluptatem consequuntur! Lorem ipsum dolor sit
+                                amet consectetur adipisicing elit. Minus optio impedit minima maiores dolores, at fugiat
+                                ullam accusantium velit sapiente! Iure deserunt magni commodi nisi similique illum
+                                officia quas esse.
+                            </p>
+                        </div>
 
-                <div class="about-me">
-                    <div class="about">
-                        <h1 class="about-title">About</h1>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo omnis voluptate, atque dolorum neque culpa cumque tempora eveniet et aliquid dignissimos. Officiis soluta nobis perspiciatis aspernatur? Eveniet ipsum voluptatem consequuntur!
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus optio impedit minima maiores dolores, at fugiat ullam accusantium velit sapiente! Iure deserunt magni commodi nisi similique illum officia quas esse.
-                        </p>
-                    </div>
+                        <div class="about">
+                            <h1 class="about-title">Skills</h1>
+                            <ul class="skills">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>Javascript</li>
+                                <li>Node JS</li>
+                                <li>Express JS</li>
+                                <li>React</li>
+                                <li>Laravel</li>
+                                <li>Angular</li>
+                                <li>Java</li>
+                                <li>Spring Boot</li>
+                            </ul>
+                        </div>
 
-                    <div class="about">
-                        <h1 class="about-title">Work Experience</h1>
-                        <p>
-                            Currently working as a freelancer
-                        </p>
-                        <p>
-                            3 years Experience in web devlopment
-                        </p>
-                        <p>
-                            2 years Experience in game devlopment
-                        </p>
-                    </div>
+                        <div class="about">
+                            <h1 class="about-title">Work Experience</h1>
+                            <ul>
+                                <li>Currently working as a freelancer</li>
+                                <li>3 years Experience in web devlopment</li>
+                                <li>2 years Experience in game devlopment</li>
+                            </ul>
+                        </div>
 
-                    <div class="about">
-                        <h1 class="about-title">Achievments</h1>
-                        <p>
-                            Currently working as a freelancer
-                        </p>
-                        <p>
-                            3 years Experience in web devlopment
-                        </p>
-                        <p>
-                            2 years Experience in game devlopment
-                        </p>
+                        <div class="about">
+                            <h1 class="about-title">Achievments</h1>
+                            <ul>
+                                <li>Gold Medal in Maths Olympiad</li>
+                                <li>Silver Medal in Science Olympiad</li>
+                                <li>Winner of Chess Championship</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>            
+
+                <!-- services area -->
+                <div class="services-section">
+                    <div class="services">
+                        <div class="service">
+                            <i class="fa-solid fa-computer"></i>
+                            <h1>Web Devlopment</h1>
+                            <h2>$120 - $1000</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur consectetur adipisicing elit.</p>
+                            <button class="btn">Get a Quote</button>
+                        </div>
+
+                        <div class="service">
+                            <i class="fa-brands fa-app-store-ios"></i>
+                            <h1>IOS Devlopment</h1>
+                            <h2>$120 - $1000</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur consectetur adipisicing elit.</p>
+                            <button class="btn">Get a Quote</button>
+                        </div>
+
+                        <div class="service">
+                            <i class="fa-brands fa-android"></i>
+                            <h1>Android Devlopment</h1>
+                            <h2>$120 - $1000</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur consectetur adipisicing elit.</p>
+                            <button class="btn">Get a Quote</button>
+                        </div>
+
+                        <div class="service">
+                            <i class="fa-regular fa-file"></i>
+                            <h1>Content Writing</h1>
+                            <h2>$120 - $1000</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur consectetur adipisicing elit.</p>
+                            <button class="btn">Get a Quote</button>
+                        </div>
+
+                        <div class="service">
+                            <i class="fa-solid fa-globe"></i>
+                            <h1>Web Hoisting</h1>
+                            <h2>$120 - $1000</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur consectetur adipisicing elit.</p>
+                            <button class="btn">Get a Quote</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- work area -->
+                <div class="work-section">
+                    <div class="works">
+                        <div class="work work1">
+                            <div class="work-overlay">
+                                <p>shoesale.com</p>
+                            </div>
+                        </div>
+                        <div class="work work2">
+                            <div class="work-overlay">
+                                <p>shirtsale.com</p>
+                            </div>
+                        </div>
+                        <div class="work work3">
+                            <div class="work-overlay">
+                                <p>nykaa.com</p>
+                            </div>
+                        </div>
+                        <div class="work work4">
+                            <div class="work-overlay">
+                                <p>flipkart.com</p>
+                            </div>
+                        </div>
+                        <div class="work work5">
+                            <div class="work-overlay">
+                                <p>trolleybags.com</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+            integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+        <script>
+            $(document).ready(function () {
+                $(".about-me-link").on("click", function () {
+                    $('.about-section').show()
+                    $('.services-section').hide()
+                    $('.work-section').hide()
+
+                    $('.about-me-link').addClass('active')
+                    $('.services-link').removeClass('active')
+                    $('.work-link').removeClass('active')
+                });
+
+                $(".services-link").on("click", function () {
+                    $('.services-section').show()
+                    $('.about-section').hide()
+                    $('.work-section').hide()
+
+                    $('.about-me-link').removeClass('active')
+                    $('.services-link').addClass('active')
+                    $('.work-link').removeClass('active')
+                });
+
+                $('.work-link').on('click', function(){
+                    $('.work-section').show()
+                    $('.about-section').hide()
+                    $('.services-section').hide()
+
+                    $('.about-me-link').removeClass('active')
+                    $('.services-link').removeClass('active')
+                    $('.work-link').addClass('active')
+                })
+            });
+        </script>
     </body>
 </html>
